--- a/app/src/main/res/layout/activity_transactions.xml
+++ b/app/src/main/res/layout/activity_transactions.xml
@@ -8,7 +8,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="#048F55"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.activity.TransactionsActivity">
@@ -17,7 +17,7 @@
             android:id="@+id/transactionAppBar"
             android:elevation="0dp"
             app:elevation="0dp"
-            android:background="#048F55"
+            android:background="@color/white"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,11 +38,12 @@
                     android:id="@+id/btnTransactionBack"
                     android:src="@drawable/ic_baseline_arrow_back_ios_24"
                     android:layout_width="0dp"
-                    android:layout_height="30dp"/>
+                    android:layout_height="30dp"
+                    app:tint="@color/title_text_color" />
                 <TextView
                     android:layout_weight="0.6"
                     android:textSize="22sp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/title_text_color"
                     android:fontFamily="@font/satoshi_bold"
                     android:text="My Transactions"
                     android:gravity="center"
@@ -65,8 +66,6 @@
 
             <LinearLayout
                 android:padding="10dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/content_background"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -74,14 +73,23 @@
 
 
                 <Spinner
-                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="14dp"
                     android:layout_marginRight="14dp"
                     android:id="@+id/spTransactions"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/shimmerTransactions"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <include
+                        layout="@layout/transaction_loading_place_holder"/>
+
+                </com.facebook.shimmer.ShimmerFrameLayout>
+
                 <androidx.recyclerview.widget.RecyclerView
+                    android:visibility="gone"
                     android:layout_marginTop="18dp"
                     android:layout_marginLeft="14dp"
                     android:layout_marginRight="14dp"
