--- a/app/src/main/res/layout/transaction_item_layout.xml
+++ b/app/src/main/res/layout/transaction_item_layout.xml
@@ -10,6 +10,7 @@
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
         android:layout_margin="8dp"
+        android:backgroundTint="@color/bg_color"
         android:id="@+id/cardItemTransaction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
