--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -266,6 +266,37 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/cartLogin"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:fontFamily="@font/satoshi_medium"
+                android:textSize="24sp"
+                android:gravity="center"
+                android:text="Please Login To Perform Further Actions"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnLoginRegisterCart"
+                android:text="Login/Register"
+                android:textAllCaps="false"
+                android:textSize="12sp"
+                android:textColor="@color/white"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginLeft="16dp"
+                android:background="@drawable/normal_button_bg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/sRefresh"
             android:layout_width="match_parent"
@@ -274,6 +305,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
+
 
 
             <com.facebook.shimmer.ShimmerFrameLayout
@@ -285,6 +317,8 @@
                 <include layout="@layout/loading_cart_place_holder"/>
 
             </com.facebook.shimmer.ShimmerFrameLayout>
+
+
 
         <com.factor.bouncy.BouncyNestedScrollView
             android:visibility="gone"
