--- a/app/src/main/res/layout/bottom_sheet_menu.xml
+++ b/app/src/main/res/layout/bottom_sheet_menu.xml
@@ -151,6 +151,7 @@
                 android:layout_height="24dp"/>
 
             <TextView
+                android:id="@+id/btnLogOutText"
                 android:layout_margin="10dp"
                 android:text="Logout"
                 android:textSize="16sp"
