--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -266,6 +266,17 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
+        <include
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/cartsAppBar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/emptyCartView"
+            layout="@layout/empty_cart_place_holder"/>
+
         <LinearLayout
             android:visibility="gone"
             android:id="@+id/cartLogin"
