--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -59,6 +59,17 @@
         <include
             android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/orderAppBar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/emptyOrderView"
+            layout="@layout/empty_cart_place_holder"/>
+
+        <include
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/orderAppBar"
             android:layout_height="0dp"
             android:layout_width="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
