Connected ProductDetails screen with Cart module

--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -11,7 +11,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="128dp"
         android:animateLayoutChanges="true">
 
 
@@ -115,13 +115,22 @@
                 android:textStyle="bold"
                 />
 
+            <View
+                android:id="@+id/divider3"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="?android:attr/listDivider"
+                android:layout_marginVertical="4dp"/>
+
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvBasePrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Base Price: ₹"
                 android:textStyle="bold"
-                android:layout_marginBottom="8dp"/>
+                />
+
+
 
             <FrameLayout
                 android:layout_width="match_parent"
