--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="margin_medium">16dp</dimen>
     <dimen name="padding_medium">16dp</dimen>
     <dimen name="margin_high">24dp</dimen>
+    <dimen name="very_low_radius">4dp</dimen>
 </resources>
