--- a/app/src/main/res/layout/activity_reviews.xml
+++ b/app/src/main/res/layout/activity_reviews.xml
@@ -67,14 +67,32 @@
             android:id="@+id/loginRegisterReviews"
             layout="@layout/login_place_holder"/>
 
-        <com.factor.bouncy.BouncyNestedScrollView
-            android:id="@+id/bounceReviewScroll"
+        <include
+            android:visibility="gone"
+            android:id="@+id/emptyReviews"
+            app:layout_constraintTop_toBottomOf="@id/reviewsAppBar"
+            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            layout="@layout/empty_cart_place_holder"/>
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/refreshReview"
             app:layout_constraintTop_toBottomOf="@id/reviewsAppBar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="match_parent"
             android:layout_height="0dp">
+
+
+
+        <com.factor.bouncy.BouncyNestedScrollView
+            android:id="@+id/bounceReviewScroll"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:padding="10dp"
@@ -107,5 +125,7 @@
 
 
         </com.factor.bouncy.BouncyNestedScrollView>
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
