--- a/app/src/main/res/layout/activity_transactions.xml
+++ b/app/src/main/res/layout/activity_transactions.xml
@@ -67,14 +67,33 @@
             android:id="@+id/loginRegisterTransaction"
             layout="@layout/login_place_holder"/>
 
-        <com.factor.bouncy.BouncyNestedScrollView
-            android:id="@+id/bounceTransactionScroll"
+        <include
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/transactionAppBar"
+            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/emptyTransaction"
+            layout="@layout/empty_cart_place_holder"/>
+
+
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/refreshTransaction"
             app:layout_constraintTop_toBottomOf="@id/transactionAppBar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="match_parent"
             android:layout_height="0dp">
+
+
+        <com.factor.bouncy.BouncyNestedScrollView
+            android:id="@+id/bounceTransactionScroll"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:padding="10dp"
@@ -116,5 +135,6 @@
 
         </com.factor.bouncy.BouncyNestedScrollView>
 
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
