--- a/app/src/main/res/layout/frag_register.xml
+++ b/app/src/main/res/layout/frag_register.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -198,6 +199,7 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:id="@+id/edEmailContainer"
                 app:helperText="Required"
                 android:layout_marginTop="34dp"
@@ -208,7 +210,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/ETEmail"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/satoshi_regular"
                 android:textColor="@color/title_text"
                 android:textSize="14sp"
@@ -218,6 +220,7 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:id="@+id/edPasswordContainer"
                 app:helperText="Required"
                 app:counterEnabled="true"
@@ -233,7 +236,7 @@
                 android:layout_marginTop="4dp"
                 android:id="@+id/ETPassword"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:maxLength="16"
                 android:fontFamily="@font/satoshi_regular"
                 android:inputType="textPassword"
@@ -246,6 +249,7 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:id="@+id/edPhoneContainer"
                 app:helperText="Required"
                 app:counterEnabled="true"
@@ -259,7 +263,7 @@
                 android:layout_marginTop="4dp"
                 android:id="@+id/etMobileNumber"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/satoshi_regular"
                 android:inputType="number"
                 android:maxLength="10"
