--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="128dp"
-        android:animateLayoutChanges="true">
+        android:animateLayoutChanges="true"
+        android:isScrollContainer="true">
 
 
         <androidx.appcompat.widget.LinearLayoutCompat
