--- a/app/src/main/res/layout/activity_custom_banner.xml
+++ b/app/src/main/res/layout/activity_custom_banner.xml
@@ -7,6 +7,11 @@
 
     </data>
 
+    <com.factor.bouncy.BouncyNestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
     <LinearLayout
         android:id="@+id/llMain"
         android:animateLayoutChanges="true"
@@ -15,15 +20,19 @@
         android:layout_height="match_parent"
         tools:context=".ui.activity.CustomBannerActivity">
 
+
         <ImageView
+            android:clickable="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="56dp"
             android:src="@drawable/ic_launcher_background"
             android:scaleType="centerCrop"
             android:layout_gravity="center"
-            android:id="@+id/sampleView"
+            android:id="@+id/customPosterImage"
             android:background="#DDDDDD"
             android:layout_width="200dp"
             android:layout_height="200dp"/>
-
 
         <EditText
             android:text="200"
@@ -52,34 +61,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+
+
     </LinearLayout>
+
+
+    </com.factor.bouncy.BouncyNestedScrollView>
 </layout>
-<!--
-<androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_gravity="center"
-            android:id="@+id/framLayout"
-            android:background="@color/black"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"/>
-
-        <TextView
-            android:id="@+id/txtDragMe"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="4dp"
-            android:background="@color/black"
-            android:textColor="@color/white"
-            android:fontFamily="@font/satoshi_bold"
-            android:textSize="26sp"
-            android:text="Drag me anywhere"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-
-        <TextView
-            android:id="@+id/txtPosition"
-            android:text="Position"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
--->
