--- a/app/src/main/res/layout/frag_login.xml
+++ b/app/src/main/res/layout/frag_login.xml
@@ -1,87 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.auth.LoginFrag"
-    >
+    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
+    tools:context=".ui.fragments.auth.LoginFrag">
 
     <TextView
         android:id="@+id/loginTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="180dp"
+        android:fontFamily="@font/satoshi_medium"
         android:text="Let's Sign in !"
+        android:textColor="@color/title_text_color"
         android:textSize="32sp"
         android:textStyle="bold"
-        android:textColor="@color/title_text_color"
-        android:fontFamily="@font/satoshi_medium"
-        app:layout_constraintBottom_toTopOf="@+id/ETEmail"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.571" />
 
-    <TextView
+
+    <LinearLayout
+        android:id="@+id/loginDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/satoshi_regular"
-        android:text="Email Address"
-        android:textColor="@color/title_text"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_marginHorizontal="25dp"
-        android:padding="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/ETEmail" />
+        android:layout_marginTop="40dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/loginTitle">
 
-    <EditText
-        android:id="@+id/ETEmail"
-        android:layout_width="match_parent"
-        android:hint="Enter your email..."
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="25dp"
-        android:layout_marginVertical="8dp"
-        android:background="@drawable/edittext_bg"
-        android:paddingVertical="8dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="4dp"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.398" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_marginHorizontal="26dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter email">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/satoshi_regular"
-        android:text="Password"
-        android:textColor="@color/title_text"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_marginHorizontal="25dp"
-        android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/ETEmail"
-        app:layout_constraintBottom_toTopOf="@+id/ETPassword" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/ETEmail"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:textSize="16sp" />
 
-    <EditText
-        android:id="@+id/ETPassword"
-        android:layout_width="match_parent"
-        android:hint="Keep it secret..."
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="25dp"
-        android:layout_marginVertical="32dp"
-        android:background="@drawable/edittext_bg"
-        android:paddingVertical="8dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="4dp"
-        android:textSize="16sp"
-        android:outlineProvider="bounds"
-        android:padding="8dp"
-        android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@+id/ETEmail" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_marginHorizontal="26dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:hint="Enter password"
+            app:passwordToggleEnabled="true">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/ETPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textSize="16sp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/TVForgotPassword"
@@ -90,24 +73,24 @@
         android:layout_margin="12dp"
         android:text="Forgot password ?"
         android:textColor="@color/title_text"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/BtnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="100dp"
+        android:layout_marginTop="46dp"
+        android:background="@drawable/normal_button_bg"
+        android:fontFamily="@font/satoshi_regular"
+        android:padding="2dp"
         android:text="@string/login"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:fontFamily="@font/satoshi_regular"
-        android:background="@drawable/normal_button_bg"
-        android:layout_marginHorizontal="100dp"
-        android:layout_marginTop="56dp"
-        android:padding="2dp"
-        app:layout_constraintTop_toBottomOf="@id/ETPassword"/>
+        app:layout_constraintTop_toBottomOf="@id/loginDetails" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
