--- a/app/src/main/res/layout/product_buying_button_layout.xml
+++ b/app/src/main/res/layout/product_buying_button_layout.xml
@@ -94,7 +94,7 @@
         android:textSize="16sp"
         android:textColor="@color/white"
         android:textAllCaps="false"
-        android:text="Add to Cart"
+        android:text="@string/add_to_cart"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1.9"
