--- a/app/src/main/res/layout/frag_login.xml
+++ b/app/src/main/res/layout/frag_login.xml
@@ -39,6 +39,7 @@
             android:hint="Enter email">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:fontFamily="@font/satoshi_medium"
                 android:id="@+id/ETEmail"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
@@ -56,6 +57,7 @@
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:fontFamily="@font/satoshi_medium"
                 android:id="@+id/ETPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
