UX Improvements in User Profile module

--- a/app/src/main/res/layout/profile_card_views.xml
+++ b/app/src/main/res/layout/profile_card_views.xml
@@ -26,7 +26,7 @@
                 android:background="@drawable/profile_image_bg"
                 android:src="@drawable/ic_user"
                 android:padding="8dp"
-                android:cropToPadding="true"
+                android:scaleType="centerCrop"
                 />
 
             <LinearLayout
