--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -64,7 +64,7 @@
                     android:text="Total : $5"
                     android:textSize="14sp"
                     android:fontFamily="@font/satoshi_medium"
-                    android:textColor="@color/order_selected_text_color"
+                    android:textColor="#048F55"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
@@ -91,8 +91,11 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="4dp"
                 android:orientation="horizontal">
 
+                <!--
                 <EditText
                     android:gravity="center"
                     android:textSize="12sp"
@@ -116,6 +119,36 @@
                     android:text="Update"
                     android:textColor="@color/white"
                     android:textAllCaps="false"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                    -->
+                <ImageView
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:id="@+id/btnMinusCart"
+                    android:src="@drawable/ic_baseline_horizontal_rule_24"
+                    android:background="@drawable/round_button_bg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:textSize="18sp"
+                    android:fontFamily="@font/satoshi_medium"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="8dp"
+                    android:id="@+id/txtCartItemQuantityText"
+                    android:text="0"
+                    android:textColor="@color/title_text_color"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <ImageView
+                    android:layout_marginLeft="8dp"
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:id="@+id/btnPlusCart"
+                    android:src="@drawable/ic_baseline_add_24"
+                    android:background="@drawable/round_button_bg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
