--- a/app/src/main/res/layout/frag_register.xml
+++ b/app/src/main/res/layout/frag_register.xml
@@ -7,108 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-       <!-- <TextView
-            android:id="@+id/loginTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="140dp"
-            android:textColor="@color/black"
-            android:text="Registeration"
-            android:textSize="28sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/ETName"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginVertical="16dp"
-            android:background="@color/white"
-            android:hint="name"
-            android:outlineProvider="bounds"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/loginTitle"
-            app:layout_constraintVertical_bias="0.101" />
-
-        <EditText
-            android:id="@+id/ETEmail"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginVertical="16dp"
-            android:background="@color/white"
-            android:hint="@string/email"
-            android:outlineProvider="bounds"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ETName" />
-
-        <EditText
-            android:id="@+id/ETPassword"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginVertical="16dp"
-            android:layout_marginTop="20dp"
-            android:background="@color/white"
-            android:hint="@string/password"
-            android:outlineProvider="bounds"
-            android:padding="8dp"
-            android:text="@={RegisterFrag._pwd}"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ETEmail" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/BtnRegister"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/register"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:background="@drawable/button_bg"
-            android:layout_marginHorizontal="100dp"
-            android:layout_marginTop="56dp"
-            android:padding="2dp"
-            app:layout_constraintTop_toBottomOf="@id/ETPassword" />
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/BtnRegister">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Already have account? "
-                android:textColor="@color/white" />
-
-            <TextView
-                android:id="@+id/TVLogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Login"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
-        </androidx.appcompat.widget.LinearLayoutCompat>-->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -150,53 +49,12 @@
                 android:text="Create an account"
                 android:textStyle="bold" />
 
-            <!-- <TextView
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:fontFamily="@font/satoshi_regular"
-                 android:text="First Name"
-                 android:textColor="@color/title_text"
-                 android:textSize="16sp"
-                 android:textStyle="bold" />
-
-             <androidx.appcompat.widget.AppCompatEditText
-                 android:id="@+id/ETFirstName"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:fontFamily="@font/satoshi_regular"
-                 android:textColor="@color/title_text"
-                 android:textSize="14sp"
-                 android:textStyle="bold" />
-
-             <TextView
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:layout_marginTop="10dp"
-                 android:fontFamily="@font/satoshi_regular"
-                 android:text="Last Name"
-                 android:textColor="@color/title_text"
-                 android:textSize="16sp"
-                 android:textStyle="bold" />
-
-             <androidx.appcompat.widget.AppCompatEditText
-                 android:id="@+id/ETLastName"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:fontFamily="@font/satoshi_regular"
-                 android:textColor="@color/title_text"
-                 android:textSize="14sp"
-                 android:textStyle="bold" />-->
             <View
                 android:id="@+id/divider2"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="?android:attr/listDivider"
                 android:layout_marginHorizontal="56dp"/>
-
-
-
-
-
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -265,7 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/satoshi_regular"
-                android:inputType="number"
+                android:inputType="phone"
                 android:maxLength="10"
                 android:textColor="@color/title_text"
                 android:textSize="14sp"
@@ -321,5 +179,6 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </ScrollView>
+
 
 </FrameLayout>
