Chat functionality done !

--- a/app/src/main/res/layout/item_me_message.xml
+++ b/app/src/main/res/layout/item_me_message.xml
@@ -13,16 +13,18 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.card.MaterialCardView
+            app:cardElevation="0dp"
             android:layout_margin="4dp"
-            app:cardCornerRadius="10dp"
-            android:backgroundTint="#0C65FF"
+            app:cardCornerRadius="22dp"
+            android:backgroundTint="#048F55"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_margin="6dp"
+                android:layout_margin="12dp"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="16sp"
+                android:fontFamily="@font/satoshi_medium"
                 android:id="@+id/txtMessageMe"
                 android:text="Hello how are you?"
                 android:layout_width="wrap_content"
@@ -34,6 +36,8 @@
             android:layout_marginHorizontal="10dp"
             android:id="@+id/txtMessageTimeMe"
             android:text="15:09 Pm"
+            android:textSize="10sp"
+            android:fontFamily="@font/satoshi_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
