--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -12,13 +12,56 @@
         android:layout_height="match_parent"
         tools:context=".ui.activity.ChatActivity">
 
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/chatAppBar"
+            android:elevation="0dp"
+            app:elevation="0dp"
+            android:background="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="56dp">
+
+            <LinearLayout
+                android:weightSum="1"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="0.2"
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:id="@+id/btnChatBack"
+                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    app:tint="@color/title_text_color" />
+                <TextView
+                    android:layout_weight="0.6"
+                    android:textSize="22sp"
+                    android:textColor="@color/title_text_color"
+                    android:fontFamily="@font/satoshi_bold"
+                    android:text="Customer Support"
+                    android:gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"/>
+
+
+
+            </LinearLayout>
+
+        </com.google.android.material.appbar.AppBarLayout>
         <androidx.recyclerview.widget.RecyclerView
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:id="@+id/rvChats"
             tools:listitem="@layout/item_other_message"
             android:paddingTop="12dp"
             android:paddingHorizontal="12dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/chatAppBar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/llChat"
@@ -27,8 +70,11 @@
 
 
         <LinearLayout
+            android:layout_margin="10dp"
+            android:background="@drawable/gridview_bg"
             android:id="@+id/llChat"
             android:weightSum="1"
+            app:layout_constraintTop_toBottomOf="@id/rvChats"
             android:paddingHorizontal="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,19 +84,25 @@
             android:layout_height="66dp">
 
             <EditText
+                android:layout_gravity="center"
                 android:layout_weight="0.8"
                 android:id="@+id/edMessage"
                 android:hint="Enter your message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-            <Button
+            <ImageView
+                android:layout_gravity="center"
+                android:clickable="true"
                 android:layout_weight="0.2"
                 android:id="@+id/btnSendMessage"
-                android:text="Send"
+                android:src="@drawable/ic_baseline_send_24"
+                android:background="@drawable/round_send_button_bg"
                 android:textAllCaps="false"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_width="24dp"
+                android:padding="16dp"
+                android:layout_height="match_parent"
+                android:layout_marginVertical="4dp"/>
 
         </LinearLayout>
 
