--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -50,6 +50,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"/>
 
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_weight="0.2"
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:id="@+id/btnOrderChat"
+                    android:src="@drawable/ic_baseline_support_agent_24"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"/>
 
 
             </LinearLayout>
