--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,13 +16,24 @@
     <color name="title_text_color">#213357</color>
     <color name="text_normal_color">#374457</color>
 
-<!--    Auth Module Colors-->
+    <!--    Auth Module Colors-->
     <color name="background">#ffffff</color>
     <color name="editTextColor">#f5f6f8</color>
     <color name="buttonColor">#3253e0</color>
     <color name="head_text">#1a1b39</color>
     <color name="title_text">#32353e</color>
     <color name="error">#dddd4444</color>
+    <color name="light_blue_400">#FF29B6F6</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="gray_400">#FFBDBDBD</color>
+    <color name="gray_600">#FF757575</color>
+
+    <!-- morph button -->
+    <color name="light_green">#c4e9d5</color>
+    <color name="green">#0b9845</color>
+    <color name="gray">#dee1e2</color>
+    <color name="red">#FFE91E63</color>
+    <color name="light_yellow">#FFFFF59D</color>
 
 
 </resources>
