--- a/app/src/main/res/layout/profile_cards.xml
+++ b/app/src/main/res/layout/profile_cards.xml
@@ -22,11 +22,11 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSeeMore"
-            android:layout_width="36dp"
+            android:layout_width="28dp"
             android:layout_height="36dp"
-            android:background="@drawable/ic_arrow"
             android:layout_gravity="end|center_vertical"
-            android:layout_margin="8dp"/>
+            android:layout_margin="8dp"
+            android:background="@drawable/ic_arrow" />
 
     </androidx.cardview.widget.CardView>
 
