Added functionality to allow review on a product

--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -26,6 +26,7 @@
                 app:tint="@color/title_text_color" />
 
         <LinearLayout
+            android:id="@+id/giveReviewLayout"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
